# openldap

./: CMakeLists.txt  config.cmake
include/: CMakeLists.txt  lber_types.hin  portable.hin
libraries/: CMakeLists.txt
libraries/liblber/: CMakeLists.txt  sockbuf.c
libraries/libldap/: CMakeLists.txt  add.c
